--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.1",
+    "node-fetch": "^2.6.6",
     "socket.io": "^4.3.1"
   }
 }
